--- a/src/components/login/index.css
+++ b/src/components/login/index.css
@@ -1,3 +1,6 @@
+.main{
+    background-color: #6495ED;
+}
 .login-form{
     width: 100%;
     height: 100vh;
@@ -5,4 +8,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+.form_details{
+    background-color: white;
 }
